
****************************** DRUPAL 7 - 2.x BRANCH ********************************

June 04, 2011
-------------
by troky: Updated topic_list preprocess function: getting 'tid' usig arg() replaced by using menu_get_item() function.
by troky: Fixed notice in views introduced by above patch.

June 02, 2011
-------------
by troky: Upgraded template_preprocess_advanced_forum_topic_list_view to Views 3.x

May 31, 2011
------------
by troky: Fixed missing forum data when only container is displayed.
by troky: Fixed theme views search path.

May 30, 2011
------------
by troky: Fixed ignored comment wrapper template.
by troky: Changed collapsible containers javascript code to allow any element as handle. Added 'collapsible' class to handle parent element, too.
by troky: Added more (fragmented) variables for themers in advanced_forum_preprocess_forum_submitted.
by troky: Added option to load/override AF views from theme folder.


May 27, 2011
------------
CREATED ALT BRANCH.

May 12, 2011
------------
by troky: Added new mark_as_read code.
by troky: Removed unused views.

May 08, 2011
------------
Issue #1150278 by troky: Fixed notice when statistics module is disabled.

May 07, 2011
------------
by troky: Unanswered topics view rebuilt. Removed unnecessary columns and changed sort criteria to topic/post creation date because there is no sense sorting it by last comment time since there are no comments by definition.

May 03, 2011
------------
Issue #1145852 by troky: Fixed topic-icon render code to display prober topic status.

May 02, 2011
------------
Issue #1140636 by troky: Updated views and few view-related notices.

April 28, 2011
--------------
Issue #1140636 by troky: Unanswered topics view rebuilt from scratch and re-exported. Fixed related code.

April 12, 2011
--------------
Issue #1124116 by dereine: Fixed notice and updated Views fields render code in template preprocess function.

April 07, 2011
--------------